add tensorboard logs

--- a/count_characters.ipynb
+++ b/count_characters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "dictionary = dict()\n",
     "num_of_pics = []\n",
+    "name_of_pics = []\n",
     "for folder in glob.glob('ignore_folder/data/*'):\n",
     "    count = 0\n",
     "    for file in glob.glob('{}/*'.format(folder)):\n",
@@ -26,151 +27,399 @@
     "        count += 1\n",
     "#     print('{} has {}'.format(folder.split('/')[1], count))\n",
     "    dictionary[folder.split('/')[1]] = count\n",
-    "    num_of_pics.append((folder.split('/')[1], count))"
+    "    num_of_pics.append((folder.split('/')[2], count))\n",
+    "    name_of_pics.append(folder.split('/')[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('data', 33),\n",
-       " ('data', 195),\n",
-       " ('data', 236),\n",
-       " ('data', 79),\n",
-       " ('data', 147),\n",
-       " ('data', 65),\n",
-       " ('data', 71),\n",
-       " ('data', 193),\n",
-       " ('data', 41),\n",
-       " ('data', 23),\n",
-       " ('data', 44),\n",
-       " ('data', 32),\n",
-       " ('data', 17),\n",
-       " ('data', 44),\n",
-       " ('data', 40),\n",
-       " ('data', 40),\n",
-       " ('data', 13),\n",
-       " ('data', 129),\n",
-       " ('data', 68),\n",
-       " ('data', 92),\n",
-       " ('data', 14),\n",
-       " ('data', 145),\n",
-       " ('data', 57),\n",
-       " ('data', 14),\n",
-       " ('data', 15),\n",
-       " ('data', 123),\n",
-       " ('data', 14),\n",
-       " ('data', 22),\n",
-       " ('data', 21),\n",
-       " ('data', 37),\n",
-       " ('data', 56),\n",
-       " ('data', 27),\n",
-       " ('data', 35),\n",
-       " ('data', 13),\n",
-       " ('data', 52),\n",
-       " ('data', 94),\n",
-       " ('data', 710),\n",
-       " ('data', 11),\n",
-       " ('data', 193),\n",
-       " ('data', 14),\n",
-       " ('data', 12),\n",
-       " ('data', 11),\n",
-       " ('data', 31),\n",
-       " ('data', 30),\n",
-       " ('data', 21),\n",
-       " ('data', 21),\n",
-       " ('data', 12),\n",
-       " ('data', 35),\n",
-       " ('data', 102),\n",
-       " ('data', 28),\n",
-       " ('data', 208),\n",
-       " ('data', 22),\n",
-       " ('data', 64),\n",
-       " ('data', 91),\n",
-       " ('data', 26),\n",
-       " ('data', 33),\n",
-       " ('data', 37),\n",
-       " ('data', 42),\n",
-       " ('data', 92),\n",
-       " ('data', 63),\n",
-       " ('data', 19),\n",
-       " ('data', 50),\n",
-       " ('data', 47),\n",
-       " ('data', 29),\n",
-       " ('data', 120),\n",
-       " ('data', 14),\n",
-       " ('data', 10),\n",
-       " ('data', 36),\n",
-       " ('data', 17),\n",
-       " ('data', 11),\n",
-       " ('data', 33),\n",
-       " ('data', 14),\n",
-       " ('data', 114),\n",
-       " ('data', 39),\n",
-       " ('data', 26),\n",
-       " ('data', 29),\n",
-       " ('data', 38),\n",
-       " ('data', 74),\n",
-       " ('data', 166),\n",
-       " ('data', 19),\n",
-       " ('data', 66),\n",
-       " ('data', 16),\n",
-       " ('data', 43),\n",
-       " ('data', 105),\n",
-       " ('data', 145),\n",
-       " ('data', 79),\n",
-       " ('data', 10),\n",
-       " ('data', 15),\n",
-       " ('data', 212),\n",
-       " ('data', 27),\n",
-       " ('data', 13),\n",
-       " ('data', 66),\n",
-       " ('data', 101),\n",
-       " ('data', 17),\n",
-       " ('data', 56),\n",
-       " ('data', 18),\n",
-       " ('data', 23),\n",
-       " ('data', 26),\n",
-       " ('data', 19),\n",
-       " ('data', 15),\n",
-       " ('data', 65),\n",
-       " ('data', 18),\n",
-       " ('data', 79),\n",
-       " ('data', 154),\n",
-       " ('data', 10),\n",
-       " ('data', 169),\n",
-       " ('data', 158),\n",
-       " ('data', 197),\n",
-       " ('data', 124),\n",
-       " ('data', 164),\n",
-       " ('data', 17),\n",
-       " ('data', 27),\n",
-       " ('data', 62),\n",
-       " ('data', 67),\n",
-       " ('data', 11),\n",
-       " ('data', 19),\n",
-       " ('data', 48),\n",
-       " ('data', 14),\n",
-       " ('data', 72),\n",
-       " ('data', 93),\n",
-       " ('data', 161),\n",
-       " ('data', 52),\n",
-       " ('data', 16),\n",
-       " ('data', 52),\n",
-       " ('data', 156)]"
+       "[('a5df', 33),\n",
+       " ('a447', 195),\n",
+       " ('a440', 236),\n",
+       " ('a476', 79),\n",
+       " ('a67e', 147),\n",
+       " ('ae61', 65),\n",
+       " ('a470', 71),\n",
+       " ('a448', 193),\n",
+       " ('a9d2', 41),\n",
+       " ('a44a', 23),\n",
+       " ('a5d0', 44),\n",
+       " ('a569', 32),\n",
+       " ('acdb', 17),\n",
+       " ('a8e2', 44),\n",
+       " ('a558', 40),\n",
+       " ('a4ce', 40),\n",
+       " ('a4f1', 13),\n",
+       " ('a4e9', 129),\n",
+       " ('a6ca', 68),\n",
+       " ('b773', 92),\n",
+       " ('ab42', 14),\n",
+       " ('a8e4', 145),\n",
+       " ('a4e8', 57),\n",
+       " ('ad78', 14),\n",
+       " ('b944', 15),\n",
+       " ('a8c6', 123),\n",
+       " ('a6d1', 14),\n",
+       " ('a977', 22),\n",
+       " ('a57e', 21),\n",
+       " ('a8a3', 37),\n",
+       " ('a4d2', 56),\n",
+       " ('a6b3', 27),\n",
+       " ('a8ad', 35),\n",
+       " ('a740', 13),\n",
+       " ('a8bd', 52),\n",
+       " ('a8ae', 94),\n",
+       " ('a4a7', 710),\n",
+       " ('b3a3', 11),\n",
+       " ('a46c', 193),\n",
+       " ('a464', 14),\n",
+       " ('a656', 12),\n",
+       " ('a5fe', 11),\n",
+       " ('a455', 31),\n",
+       " ('a5c1', 30),\n",
+       " ('a658', 21),\n",
+       " ('b3be', 21),\n",
+       " ('a45d', 12),\n",
+       " ('a9fa', 35),\n",
+       " ('a46b', 102),\n",
+       " ('a9ce', 28),\n",
+       " ('a453', 208),\n",
+       " ('ac46', 22),\n",
+       " ('a454', 64),\n",
+       " ('b3bd', 91),\n",
+       " ('a5c9', 26),\n",
+       " ('a650', 33),\n",
+       " ('a668', 37),\n",
+       " ('a5fd', 42),\n",
+       " ('a5d5', 92),\n",
+       " ('a5aa', 63),\n",
+       " ('a5db', 19),\n",
+       " ('a7da', 50),\n",
+       " ('a5a6', 47),\n",
+       " ('a475', 29),\n",
+       " ('a5bf', 120),\n",
+       " ('adfb', 14),\n",
+       " ('a474', 10),\n",
+       " ('a473', 36),\n",
+       " ('afe0', 17),\n",
+       " ('a8c3', 11),\n",
+       " ('a55b', 33),\n",
+       " ('bec7', 14),\n",
+       " ('b54c', 114),\n",
+       " ('a6e7', 39),\n",
+       " ('a4ec', 26),\n",
+       " ('a4fb', 29),\n",
+       " ('a751', 38),\n",
+       " ('a56b', 74),\n",
+       " ('b0a8', 166),\n",
+       " ('a4f4', 19),\n",
+       " ('a6e6', 66),\n",
+       " ('a4e2', 16),\n",
+       " ('a6e8', 43),\n",
+       " ('a4e5', 105),\n",
+       " ('a4fd', 145),\n",
+       " ('bb50', 79),\n",
+       " ('ab48', 10),\n",
+       " ('a4c0', 15),\n",
+       " ('a4eb', 212),\n",
+       " ('b0aa', 27),\n",
+       " ('a8e0', 13),\n",
+       " ('a6a8', 66),\n",
+       " ('a6db', 101),\n",
+       " ('bb44', 17),\n",
+       " ('b16f', 56),\n",
+       " ('a8d3', 18),\n",
+       " ('a6b9', 23),\n",
+       " ('a540', 26),\n",
+       " ('a6d5', 19),\n",
+       " ('b0ea', 15),\n",
+       " ('aaf8', 65),\n",
+       " ('a8a7', 18),\n",
+       " ('a4d1', 79),\n",
+       " ('a4bd', 154),\n",
+       " ('a6b8', 10),\n",
+       " ('b6c0', 169),\n",
+       " ('a4a3', 158),\n",
+       " ('a548', 197),\n",
+       " ('a4a4', 124),\n",
+       " ('aaf7', 164),\n",
+       " ('b160', 17),\n",
+       " ('a6d3', 27),\n",
+       " ('aaf9', 62),\n",
+       " ('aacc', 67),\n",
+       " ('a86b', 11),\n",
+       " ('aa47', 19),\n",
+       " ('a467', 48),\n",
+       " ('b1d0', 14),\n",
+       " ('a451', 72),\n",
+       " ('a45f', 93),\n",
+       " ('a5ce', 161),\n",
+       " ('a457', 52),\n",
+       " ('adab', 16),\n",
+       " ('aa46', 52),\n",
+       " ('a46a', 156)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "num_of_pics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a5df',\n",
+       " 'a447',\n",
+       " 'a440',\n",
+       " 'a476',\n",
+       " 'a67e',\n",
+       " 'ae61',\n",
+       " 'a470',\n",
+       " 'a448',\n",
+       " 'a9d2',\n",
+       " 'a44a',\n",
+       " 'a5d0',\n",
+       " 'a569',\n",
+       " 'acdb',\n",
+       " 'a8e2',\n",
+       " 'a558',\n",
+       " 'a4ce',\n",
+       " 'a4f1',\n",
+       " 'a4e9',\n",
+       " 'a6ca',\n",
+       " 'b773',\n",
+       " 'ab42',\n",
+       " 'a8e4',\n",
+       " 'a4e8',\n",
+       " 'ad78',\n",
+       " 'b944',\n",
+       " 'a8c6',\n",
+       " 'a6d1',\n",
+       " 'a977',\n",
+       " 'a57e',\n",
+       " 'a8a3',\n",
+       " 'a4d2',\n",
+       " 'a6b3',\n",
+       " 'a8ad',\n",
+       " 'a740',\n",
+       " 'a8bd',\n",
+       " 'a8ae',\n",
+       " 'a4a7',\n",
+       " 'b3a3',\n",
+       " 'a46c',\n",
+       " 'a464',\n",
+       " 'a656',\n",
+       " 'a5fe',\n",
+       " 'a455',\n",
+       " 'a5c1',\n",
+       " 'a658',\n",
+       " 'b3be',\n",
+       " 'a45d',\n",
+       " 'a9fa',\n",
+       " 'a46b',\n",
+       " 'a9ce',\n",
+       " 'a453',\n",
+       " 'ac46',\n",
+       " 'a454',\n",
+       " 'b3bd',\n",
+       " 'a5c9',\n",
+       " 'a650',\n",
+       " 'a668',\n",
+       " 'a5fd',\n",
+       " 'a5d5',\n",
+       " 'a5aa',\n",
+       " 'a5db',\n",
+       " 'a7da',\n",
+       " 'a5a6',\n",
+       " 'a475',\n",
+       " 'a5bf',\n",
+       " 'adfb',\n",
+       " 'a474',\n",
+       " 'a473',\n",
+       " 'afe0',\n",
+       " 'a8c3',\n",
+       " 'a55b',\n",
+       " 'bec7',\n",
+       " 'b54c',\n",
+       " 'a6e7',\n",
+       " 'a4ec',\n",
+       " 'a4fb',\n",
+       " 'a751',\n",
+       " 'a56b',\n",
+       " 'b0a8',\n",
+       " 'a4f4',\n",
+       " 'a6e6',\n",
+       " 'a4e2',\n",
+       " 'a6e8',\n",
+       " 'a4e5',\n",
+       " 'a4fd',\n",
+       " 'bb50',\n",
+       " 'ab48',\n",
+       " 'a4c0',\n",
+       " 'a4eb',\n",
+       " 'b0aa',\n",
+       " 'a8e0',\n",
+       " 'a6a8',\n",
+       " 'a6db',\n",
+       " 'bb44',\n",
+       " 'b16f',\n",
+       " 'a8d3',\n",
+       " 'a6b9',\n",
+       " 'a540',\n",
+       " 'a6d5',\n",
+       " 'b0ea',\n",
+       " 'aaf8',\n",
+       " 'a8a7',\n",
+       " 'a4d1',\n",
+       " 'a4bd',\n",
+       " 'a6b8',\n",
+       " 'b6c0',\n",
+       " 'a4a3',\n",
+       " 'a548',\n",
+       " 'a4a4',\n",
+       " 'aaf7',\n",
+       " 'b160',\n",
+       " 'a6d3',\n",
+       " 'aaf9',\n",
+       " 'aacc',\n",
+       " 'a86b',\n",
+       " 'aa47',\n",
+       " 'a467',\n",
+       " 'b1d0',\n",
+       " 'a451',\n",
+       " 'a45f',\n",
+       " 'a5ce',\n",
+       " 'a457',\n",
+       " 'adab',\n",
+       " 'aa46',\n",
+       " 'a46a']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_of_pics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "at_least_fifty = []\n",
+    "for x in num_of_pics:\n",
+    "    if x[1] > 50:\n",
+    "        at_least_fifty.append(x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a447',\n",
+       " 'a440',\n",
+       " 'a476',\n",
+       " 'a67e',\n",
+       " 'ae61',\n",
+       " 'a470',\n",
+       " 'a448',\n",
+       " 'a4e9',\n",
+       " 'a6ca',\n",
+       " 'b773',\n",
+       " 'a8e4',\n",
+       " 'a4e8',\n",
+       " 'a8c6',\n",
+       " 'a4d2',\n",
+       " 'a8bd',\n",
+       " 'a8ae',\n",
+       " 'a4a7',\n",
+       " 'a46c',\n",
+       " 'a46b',\n",
+       " 'a453',\n",
+       " 'a454',\n",
+       " 'b3bd',\n",
+       " 'a5d5',\n",
+       " 'a5aa',\n",
+       " 'a5bf',\n",
+       " 'b54c',\n",
+       " 'a56b',\n",
+       " 'b0a8',\n",
+       " 'a6e6',\n",
+       " 'a4e5',\n",
+       " 'a4fd',\n",
+       " 'bb50',\n",
+       " 'a4eb',\n",
+       " 'a6a8',\n",
+       " 'a6db',\n",
+       " 'b16f',\n",
+       " 'aaf8',\n",
+       " 'a4d1',\n",
+       " 'a4bd',\n",
+       " 'b6c0',\n",
+       " 'a4a3',\n",
+       " 'a548',\n",
+       " 'a4a4',\n",
+       " 'aaf7',\n",
+       " 'aaf9',\n",
+       " 'aacc',\n",
+       " 'a451',\n",
+       " 'a45f',\n",
+       " 'a5ce',\n",
+       " 'a457',\n",
+       " 'aa46',\n",
+       " 'a46a']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "at_least_fifty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(at_least_fifty)"
    ]
   },
   {
