--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4571,12 +4571,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = tf.keras.models.Sequential()\n",
     "model.add(tf.keras.layers.Flatten(input_shape=Xtrain[0].shape))\n",
+    "model.add(tf.keras.layers.Dense(128, activation=tf.nn.relu))\n",
     "model.add(tf.keras.layers.Dense(128, activation=tf.nn.relu))\n",
     "model.add(tf.keras.layers.Dense(128, activation=tf.nn.relu))\n",
     "model.add(tf.keras.layers.Dense(8, activation=tf.nn.softmax))\n",
@@ -4585,14 +4586,14 @@
     "             loss='sparse_categorical_crossentropy',\n",
     "             metrics=['accuracy'])\n",
     "\n",
-    "Name = \"Chinese-Characters-NN-128x2-{}\".format(int(time.time()))\n",
+    "Name = \"Chinese-Characters-NN-128x3-{}\".format(int(time.time()))\n",
     "\n",
     "tensorboard = TensorBoard(log_dir='logs/{}'.format(Name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4600,41 +4601,61 @@
      "output_type": "stream",
      "text": [
       "Train on 1375 samples, validate on 590 samples\n",
-      "Epoch 1/10\n",
-      "1375/1375 [==============================] - 1s 840us/step - loss: 8.9538 - acc: 0.4422 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 2/10\n",
-      "1375/1375 [==============================] - 1s 492us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 3/10\n",
-      "1375/1375 [==============================] - 1s 468us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 4/10\n",
-      "1375/1375 [==============================] - 1s 463us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 5/10\n",
-      "1375/1375 [==============================] - 1s 467us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 6/10\n",
-      "1375/1375 [==============================] - 1s 481us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 7/10\n",
-      "1375/1375 [==============================] - 1s 475us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 8/10\n",
-      "1375/1375 [==============================] - 1s 478us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 9/10\n",
-      "1375/1375 [==============================] - 1s 483us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n",
-      "Epoch 10/10\n",
-      "1375/1375 [==============================] - 1s 484us/step - loss: 8.4283 - acc: 0.4771 - val_loss: 8.4961 - val_acc: 0.4729\n"
+      "Epoch 1/20\n",
+      "1375/1375 [==============================] - 1s 898us/step - loss: 13.7893 - acc: 0.1440 - val_loss: 14.0829 - val_acc: 0.1254\n",
+      "Epoch 2/20\n",
+      "1375/1375 [==============================] - 1s 614us/step - loss: 13.8209 - acc: 0.1411 - val_loss: 14.0692 - val_acc: 0.1271\n",
+      "Epoch 3/20\n",
+      "1375/1375 [==============================] - 1s 618us/step - loss: 13.9701 - acc: 0.1331 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 4/20\n",
+      "1375/1375 [==============================] - 1s 527us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 5/20\n",
+      "1375/1375 [==============================] - 1s 508us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 6/20\n",
+      "1375/1375 [==============================] - 1s 624us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 7/20\n",
+      "1375/1375 [==============================] - 1s 664us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 8/20\n",
+      "1375/1375 [==============================] - 1s 603us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 9/20\n",
+      "1375/1375 [==============================] - 1s 595us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 10/20\n",
+      "1375/1375 [==============================] - 1s 603us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 11/20\n",
+      "1375/1375 [==============================] - 1s 591us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 12/20\n",
+      "1375/1375 [==============================] - 1s 489us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 13/20\n",
+      "1375/1375 [==============================] - 1s 569us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 14/20\n",
+      "1375/1375 [==============================] - 1s 503us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 15/20\n",
+      "1375/1375 [==============================] - 1s 565us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 16/20\n",
+      "1375/1375 [==============================] - 1s 544us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 17/20\n",
+      "1375/1375 [==============================] - 1s 605us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 18/20\n",
+      "1375/1375 [==============================] - 1s 544us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 19/20\n",
+      "1375/1375 [==============================] - 1s 550us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n",
+      "Epoch 20/20\n",
+      "1375/1375 [==============================] - 1s 674us/step - loss: 15.0162 - acc: 0.0684 - val_loss: 15.1619 - val_acc: 0.0593\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x12f1e0048>"
+       "<tensorflow.python.keras.callbacks.History at 0x135347ac8>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(Xtrain, ytrain, epochs=10, validation_split=0.3, callbacks=[tensorboard])"
+    "model.fit(Xtrain, ytrain, epochs=20, validation_split=0.3, callbacks=[tensorboard])"
    ]
   },
   {
