--- a/character_finger_prints.ipynb
+++ b/character_finger_prints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import cv2\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -165,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data = []\n",
+    "data = []\n",
     "\n",
     "def create_training_data():\n",
     "    for category in Categories_all:\n",
@@ -187,14 +188,14 @@
     "            try:\n",
     "                img_array = cv2.imread(os.path.join(path,img), cv2.IMREAD_GRAYSCALE)\n",
     "                new_array = cv2.resize(img_array, (IMG_Y, IMG_X))\n",
-    "                training_data.append([new_array, class_num, class_type])\n",
+    "                data.append([new_array, class_num, class_type])\n",
     "            except Exception as e:\n",
     "                print('something went wrong')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.shuffle(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testing_data = data[:100]\n",
+    "training_data = data[:-100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(testing_data) + len(training_data) == len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +253,63 @@
     "    for picture in data:\n",
     "        horizontal_average = np.average(picture[0], axis=1)\n",
     "        vertical_average = np.average(picture[0], axis=0)\n",
-    "        finger_print.append([horizontal_average, vertical_average, picture[1], picture[2]])"
+    "        finger_print.append([horizontal_average, vertical_average, Categories_all[picture[1]], picture[2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_finger_print(training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([  3.28,   7.89,  13.4 ,  15.43,  17.46,  19.49,  21.72,  22.67,\n",
+       "         22.67,  22.67,  22.67,  22.67,  22.67,  22.66,  22.66,  22.67,\n",
+       "         22.67,  22.67,  22.67,  22.67,  22.67,  22.67,  22.67,  22.67,\n",
+       "         22.67,  23.37,  29.43,  35.75,  42.33,  50.64,  59.06,  67.59,\n",
+       "         76.01,  84.28,  92.34,  99.14, 101.83,  97.16,  88.01,  79.38,\n",
+       "         75.12,  58.74,  39.06,  24.3 ,  19.23,  19.24,  19.23,  19.23,\n",
+       "         19.32,  21.55,  23.7 ,  25.74,  25.82,  25.81,  25.81,  27.86,\n",
+       "         30.07,  32.07,  34.08,  35.54,  35.54,  37.  ,  39.02,  41.02,\n",
+       "         41.72,  41.7 ,  41.75,  40.56,  38.69,  41.06,  42.25,  42.25,\n",
+       "         40.17,  38.91,  38.9 ,  36.86,  35.28,  35.04,  36.63,  38.15,\n",
+       "         38.35,  40.09,  41.96,  42.11,  46.13,  55.89,  94.14, 122.25,\n",
+       "        142.41, 148.44, 150.54, 148.72, 140.43, 124.87,  99.72,  61.51,\n",
+       "         27.6 ,   4.46,   0.  ,   0.  ]),\n",
+       " array([  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.5 ,   3.87,  12.14,  17.5 ,  22.85,  31.68,\n",
+       "         31.68,  34.27,  38.97,  44.04,  46.92,  50.19,  51.  ,  52.44,\n",
+       "         56.17,  62.65,  68.79,  81.33,  91.4 ,  94.78, 101.24, 112.91,\n",
+       "        115.74, 129.56, 171.23, 199.58, 196.76, 189.19, 185.66, 188.42,\n",
+       "        188.12, 190.52, 159.64, 107.9 ,  98.44, 104.2 , 105.91, 103.08,\n",
+       "         96.36,  87.29,  80.67,  70.36,  61.34,  57.85,  51.61,  45.69,\n",
+       "         43.22,  41.19,  34.81,  31.84,  31.17,  27.98,  22.51,  19.44,\n",
+       "         19.38,  17.32,  15.75,  15.75,  15.75,  10.01,   5.63,   2.48,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ]),\n",
+       " 'a5df',\n",
+       " 'jinwen']"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finger_print[0]"
    ]
   },
   {
@@ -222,22 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_finger_print("
+    "random.shuffle(training_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
