--- a/fresh_start.ipynb
+++ b/fresh_start.ipynb
@@ -49,15 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_training_data():\n",
-    "    \"\"\"takes no arguments, accessess data in file and returns it as a list containing [0] category, \n",
-    "    [1] class_type, [2] category + class_type, [3] horizontal average, [4] vertical average, \n",
-    "    [5] the original image resized to be a 100 X 100 array\"\"\"\n",
+    "    \"\"\"takes no arguments, accessess data in file and returns it as a list containing [0] a unique id, \n",
+    "    [1] category, [2] class_type, [3] category + class_type, [4] horizontal average, [5] vertical average, \n",
+    "    [6] the original image resized to be a 100 X 100 array\"\"\"\n",
     "    data = []\n",
+    "    unique_id = 0\n",
     "    for category in Categories_all:\n",
     "        path = os.path.join(DataDir, category)\n",
     "        class_num = Categories_all.index(category)\n",
@@ -76,8 +77,9 @@
     "                new_array = cv2.resize(img_array, (IMG_Y, IMG_X))\n",
     "                horizontal_average = np.average(new_array, axis=1)\n",
     "                vertical_average = np.average(new_array, axis=0)\n",
-    "                data.append([category, class_type, category + \"-\" + class_type, \n",
+    "                data.append([unique_id, category, class_type, category + \"-\" + class_type, \n",
     "                             horizontal_average, vertical_average, new_array])\n",
+    "                unique_id += 1\n",
     "            except Exception as e:\n",
     "                print('something went wrong')\n",
     "    return data"
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,11 +111,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "shuffled_data, testing_data, training_data = shuffle(complete_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1742,\n",
+       " 'a8e4',\n",
+       " 'jinwen',\n",
+       " 'a8e4-jinwen',\n",
+       " array([ 3.09,  6.25, 10.14, 12.17, 12.67, 12.43, 12.76, 13.1 , 13.4 ,\n",
+       "        13.07, 13.94, 16.  , 14.07, 13.  , 13.28, 13.31, 13.32, 13.31,\n",
+       "        14.88, 19.77, 32.45, 35.88, 35.45, 33.27, 29.72, 25.99, 26.36,\n",
+       "        27.69, 29.91, 36.07, 40.16, 42.17, 42.25, 40.55, 36.54, 36.07,\n",
+       "        34.56, 30.1 , 30.86, 32.29, 32.17, 35.47, 39.55, 41.57, 33.95,\n",
+       "        22.16, 17.59, 16.98, 19.49, 25.92, 23.79, 13.08,  4.75,  0.  ,\n",
+       "         0.  ,  0.  ,  0.  ,  0.  , 15.26, 30.78, 37.09, 38.92, 38.61,\n",
+       "        36.66, 35.97, 35.74, 33.73, 28.04, 19.92, 19.94, 25.48, 36.63,\n",
+       "        39.  , 39.32, 37.3 , 33.23, 28.89, 24.61, 26.76, 31.02, 36.8 ,\n",
+       "        36.6 , 36.71, 47.3 , 56.27, 60.18, 31.12, 25.23, 36.39, 50.94,\n",
+       "        50.79, 35.97, 29.47, 39.14, 70.58, 55.47, 32.38,  5.23,  0.  ,\n",
+       "         0.  ]),\n",
+       " array([  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   5.09,  24.84,  51.3 ,  66.24,  44.6 ,  32.22,  59.44,\n",
+       "        115.26, 136.19,  92.64,  69.72,  74.23,  95.24,  80.02,  62.28,\n",
+       "         53.66,  48.11,  39.04,  36.06,  35.32,  30.06,  23.66,  23.56,\n",
+       "         20.59,  17.3 ,  14.21,  12.05,  12.05,  23.5 ,  31.71,  39.45,\n",
+       "         47.03,  47.04,  49.84,  52.89,  61.69,  79.06,  85.44,  80.91,\n",
+       "         83.34,  96.56, 118.34, 114.4 ,  82.25,  56.34,  49.21,  58.57,\n",
+       "         37.3 ,  15.8 ,   2.59,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,\n",
+       "          0.  ,   0.  ,   0.  ,   0.  ]),\n",
+       " array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        ...,\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0],\n",
+       "        [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shuffled_data[0]"
    ]
   },
   {
@@ -147,6 +204,82 @@
    "source": [
     "plt.imshow(shuffled_data[0][-1], cmap='gray')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fingerprint_test(testing, training):\n",
+    "    for x in testing:\n",
+    "        best_guess = []\n",
+    "        for y in training:\n",
+    "            best_guess.append(sum(abs(x[3]-y[3])), sum(abs(x[4]-y[4])))\n",
+    "        best_guess.append([int(sum(abs(horizontal_average-x[0])) \n",
+    "                               + sum(abs(vertical_average-x[1]))), \n",
+    "                           x[2] + \"-\" + x[3]])\n",
+    "    best_guess_index = np.argmin([x[0] for x in best_guess])\n",
+    "    print('right before it crashes')\n",
+    "    return [best_guess[best_guess_index][1], \n",
+    "            training_data[best_guess_index][0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
