--- a/fresh_start.ipynb
+++ b/fresh_start.ipynb
@@ -564,41 +564,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 15s, sys: 127 ms, total: 2min 15s\n",
-      "Wall time: 2min 15s\n"
+      "CPU times: user 22min 23s, sys: 1.05 s, total: 22min 24s\n",
+      "Wall time: 22min 25s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "returned_scores = run_n_simulations(10, complete_data)"
+    "returned_scores = run_n_simulations(100, complete_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.63, 0.61, 0.66, 0.59, 0.68, 0.56, 0.6, 0.68, 0.67, 0.6]"
+       "0.6478000000000003"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "returned_scores"
+    "sum(returned_scores)/100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Take a dive into the best_guess list in fingerprint_test"
    ]
   },
   {
@@ -606,7 +613,370 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fingerprint_test(testing, training):\n",
+    "    \"\"\"Takes our testing data and training data as inputs and returns our closest match for each of the testing images\n",
+    "    based on our 'training' images\"\"\"\n",
+    "    guesses = []\n",
+    "    for x in testing:\n",
+    "        best_guess = []\n",
+    "        for y in training:\n",
+    "            best_guess.append([sum(abs(x[4]-y[4])) + sum(abs(x[5]-y[5])), y[0]])\n",
+    "        guess_index = np.argmin([x[0] for x in best_guess])\n",
+    "        guesses.append([x[0], best_guess[guess_index][1]])\n",
+    "    return guesses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fingerprint_test_top_values(testing, training):\n",
+    "    \"\"\"does the same as fingerprint_test but takes a closer look at the best_guess list to see how the function\n",
+    "    is guessing\"\"\"\n",
+    "    guesses = []\n",
+    "    for x in testing:\n",
+    "        best_guess = []\n",
+    "        for y in training:\n",
+    "            best_guess.append([sum(abs(x[4]-y[4])) + sum(abs(x[5]-y[5])), y[0], y[3]])\n",
+    "        list_of_indexes = np.argpartition([x[0] for x in best_guess], range(5))[:5]\n",
+    "        guesses.append([x[3], [indexed_complete_data[x][3] for x in list_of_indexes]])\n",
+    "    return guesses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14.5 s, sys: 11.4 ms, total: 14.5 s\n",
+      "Wall time: 14.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "top_five = fingerprint_test_top_values(testing_data, training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['a448-chuxi',\n",
+       "  ['a751-oracle', 'a451-chuxi', 'a4d1-chuxi', 'a8bd-chuxi', 'b773-chuxi']],\n",
+       " ['a56b-jinwen',\n",
+       "  ['a4a7-chuxi', 'a9fa-smallseal', 'a4a7-chuxi', 'b54c-chuxi', 'a4a4-jinwen']],\n",
+       " ['a4f1-jinwen',\n",
+       "  ['a8a3-jinwen', 'a8ae-chuxi', 'a453-chuxi', 'a548-chuxi', 'a453-jinwen']],\n",
+       " ['adab-jinwen',\n",
+       "  ['a4a7-chuxi', 'aaf8-chuxi', 'bb50-chuxi', 'a5aa-chuxi', 'a4bd-chuxi']],\n",
+       " ['a8c6-jinwen',\n",
+       "  ['a4a3-chuxi', 'a473-chuxi', 'ac46-chuxi', 'a548-jinwen', 'a5a6-jinwen']],\n",
+       " ['a448-chuxi',\n",
+       "  ['a6b8-oracle', 'a457-chuxi', 'a4eb-chuxi', 'b1d0-oracle', 'a67e-jinwen']],\n",
+       " ['a9d2-chuxi',\n",
+       "  ['a56b-chuxi', 'a4a7-jinwen', 'a668-jinwen', 'b6c0-chuxi', 'a740-chuxi']],\n",
+       " ['a8bd-chuxi',\n",
+       "  ['b54c-chuxi', 'a8e4-jinwen', 'a56b-jinwen', 'a467-chuxi', 'a5d0-chuxi']],\n",
+       " ['aaf7-jinwen',\n",
+       "  ['a4d1-jinwen', 'aaf7-chuxi', 'a56b-jinwen', 'b0a8-chuxi', 'a4a7-chuxi']],\n",
+       " ['b6c0-chuxi',\n",
+       "  ['a447-chuxi', 'a5aa-chuxi', 'aaf8-chuxi', 'a4a7-chuxi', 'a4a7-jinwen']],\n",
+       " ['a7da-jinwen',\n",
+       "  ['a46a-jinwen', 'a67e-jinwen', 'a4d1-jinwen', 'a4fb-chuxi', 'a668-jinwen']],\n",
+       " ['aa46-chuxi',\n",
+       "  ['b944-jinwen', 'a6e6-chuxi', 'ab48-chuxi', 'a46b-jinwen', 'ae61-chuxi']],\n",
+       " ['a4bd-chuxi',\n",
+       "  ['a476-jinwen', 'a6ca-jinwen', 'a558-chuxi', 'a4a4-chuxi', 'a540-jinwen']],\n",
+       " ['a5aa-chuxi',\n",
+       "  ['a5aa-chuxi', 'a467-jinwen', 'a8ae-chuxi', 'a6d3-chuxi', 'a569-chuxi']],\n",
+       " ['a4e8-chuxi',\n",
+       "  ['b3bd-jinwen', 'a7da-jinwen', 'a46c-jinwen', 'a8a3-oracle', 'a4a4-chuxi']],\n",
+       " ['a440-chuxi',\n",
+       "  ['a4fb-chuxi', 'a4bd-jinwen', 'a5ce-jinwen', 'a448-chuxi', 'a4d1-jinwen']],\n",
+       " ['a476-chuxi',\n",
+       "  ['a4f1-oracle', 'a4ce-chuxi', 'a475-jinwen', 'a4eb-chuxi', 'a4bd-jinwen']],\n",
+       " ['a453-chuxi',\n",
+       "  ['a56b-chuxi', 'a5d5-chuxi', 'a4a7-chuxi', 'a4e9-chuxi', 'b0a8-chuxi']],\n",
+       " ['bb50-chuxi',\n",
+       "  ['a4eb-chuxi', 'a440-chuxi', 'b54c-jinwen', 'a9fa-jinwen', 'aaf9-chuxi']],\n",
+       " ['a4e8-jinwen',\n",
+       "  ['a448-chuxi', 'a5ce-jinwen', 'b160-chuxi', 'a6a8-jinwen', 'a4a7-chuxi']],\n",
+       " ['a447-chuxi',\n",
+       "  ['a56b-chuxi', 'ae61-chuxi', 'a451-chuxi', 'a8e4-jinwen', 'b773-chuxi']],\n",
+       " ['a4a3-chuxi',\n",
+       "  ['a46c-jinwen', 'a448-chuxi', 'a4a7-chuxi', 'a440-chuxi', 'aaf7-jinwen']],\n",
+       " ['b6c0-jinwen',\n",
+       "  ['a5c9-chuxi', 'bb50-chuxi', 'b54c-jinwen', 'a4bd-chuxi', 'a453-chuxi']],\n",
+       " ['a4e5-jinwen',\n",
+       "  ['a4a7-chuxi', 'a4a3-jinwen', 'b0a8-chuxi', 'aaf7-jinwen', 'a67e-jinwen']],\n",
+       " ['a56b-jinwen',\n",
+       "  ['a6db-chuxi', 'a9fa-smallseal', 'ae61-jinwen', 'a4a7-chuxi', 'a4fd-chuxi']],\n",
+       " ['a56b-jinwen',\n",
+       "  ['a4a7-chuxi', 'a4bd-jinwen', 'acdb-chuxi', 'a5a6-jinwen', 'a4a7-chuxi']],\n",
+       " ['ad78-jinwen',\n",
+       "  ['a4e9-jinwen', 'a4a4-chuxi', 'b944-jinwen', 'a45f-jinwen', 'a448-chuxi']],\n",
+       " ['a447-chuxi',\n",
+       "  ['a4eb-chuxi', 'a4a7-jinwen', 'aaf7-jinwen', 'a57e-jinwen', 'a548-chuxi']],\n",
+       " ['a8e4-smallseal',\n",
+       "  ['a4fd-chuxi', 'a470-jinwen', 'a5d5-chuxi', 'a4a3-chuxi', 'b3be-jinwen']],\n",
+       " ['aacc-chuxi',\n",
+       "  ['bb50-chuxi', 'b6c0-jinwen', 'a440-chuxi', 'a4a3-jinwen', 'a8e4-jinwen']],\n",
+       " ['b773-chuxi',\n",
+       "  ['a4f1-chuxi', 'a4a7-jinwen', 'a454-chuxi', 'a8e4-jinwen', 'b3be-jinwen']],\n",
+       " ['a57e-chuxi',\n",
+       "  ['a476-chuxi', 'a4a4-jinwen', 'a453-jinwen', 'a540-jinwen', 'a5ce-chuxi']],\n",
+       " ['a6e6-chuxi',\n",
+       "  ['a8ae-jinwen', 'a4a7-chuxi', 'a448-chuxi', 'a4eb-jinwen', 'a5bf-jinwen']],\n",
+       " ['a46c-jinwen',\n",
+       "  ['b6c0-jinwen', 'a55b-oracle', 'a67e-jinwen', 'a548-chuxi', 'a464-jinwen']],\n",
+       " ['a7da-jinwen',\n",
+       "  ['a4a4-jinwen',\n",
+       "   'a453-jinwen',\n",
+       "   'b773-chuxi',\n",
+       "   'a6db-smallseal',\n",
+       "   'a473-jinwen']],\n",
+       " ['a8c6-chuxi',\n",
+       "  ['a4a4-chuxi', 'a6a8-jinwen', 'a4fd-chuxi', 'b6c0-jinwen', 'a448-jinwen']],\n",
+       " ['a4a7-jinwen',\n",
+       "  ['a4e2-jinwen', 'bec7-oracle', 'a46c-jinwen', 'b0a8-chuxi', 'a548-chuxi']],\n",
+       " ['a4bd-jinwen',\n",
+       "  ['a45f-jinwen', 'a476-jinwen', 'aaf8-chuxi', 'a447-chuxi', 'a4a4-jinwen']],\n",
+       " ['a4a7-chuxi',\n",
+       "  ['a4a3-jinwen', 'a453-chuxi', 'a4f4-oracle', 'a4d2-chuxi', 'a5aa-chuxi']],\n",
+       " ['a4d1-jinwen',\n",
+       "  ['a448-chuxi', 'a548-jinwen', 'a4a7-chuxi', 'bb50-chuxi', 'a4a7-chuxi']],\n",
+       " ['a6e8-oracle',\n",
+       "  ['a4a7-chuxi', 'a4a7-chuxi', 'a6db-chuxi', 'b6c0-jinwen', 'a548-chuxi']],\n",
+       " ['a8c3-jinwen',\n",
+       "  ['a476-jinwen',\n",
+       "   'b6c0-jinwen',\n",
+       "   'a5d5-smallseal',\n",
+       "   'a453-chuxi',\n",
+       "   'a6db-chuxi']],\n",
+       " ['a467-jinwen',\n",
+       "  ['a4a4-jinwen', 'a44a-jinwen', 'a4eb-jinwen', 'a4a7-chuxi', 'a8c6-jinwen']],\n",
+       " ['a4e5-jinwen',\n",
+       "  ['a8c6-chuxi', 'a4d1-jinwen', 'a454-chuxi', 'a4e8-jinwen', 'a668-jinwen']],\n",
+       " ['a4eb-chuxi',\n",
+       "  ['b0a8-chuxi', 'a57e-chuxi', 'a8e4-jinwen', 'a4a7-jinwen', 'b6c0-jinwen']],\n",
+       " ['aacc-jinwen',\n",
+       "  ['b773-jinwen', 'a454-chuxi', 'a8a7-smallseal', 'a4a7-chuxi', 'a9d2-chuxi']],\n",
+       " ['b3bd-chuxi',\n",
+       "  ['b0a8-chuxi', 'b6c0-chuxi', 'b0a8-chuxi', 'a4eb-jinwen', 'a467-jinwen']],\n",
+       " ['a4a7-chuxi',\n",
+       "  ['bb50-chuxi', 'a6db-jinwen', 'a4a7-chuxi', 'a4a7-chuxi', 'a457-jinwen']],\n",
+       " ['a45f-jinwen',\n",
+       "  ['a4e9-chuxi', 'a977-chuxi', 'a668-jinwen', 'a447-chuxi', 'a4a3-chuxi']],\n",
+       " ['a558-chuxi',\n",
+       "  ['a447-chuxi',\n",
+       "   'a4a7-chuxi',\n",
+       "   'a8e4-jinwen',\n",
+       "   'a5df-jinwen',\n",
+       "   'a5bf-smallseal']],\n",
+       " ['a46b-jinwen',\n",
+       "  ['ac46-chuxi', 'a4a7-chuxi', 'a6e6-chuxi', 'a977-chuxi', 'a4eb-chuxi']],\n",
+       " ['a6db-jinwen',\n",
+       "  ['a46c-chuxi', 'aaf9-jinwen', 'aaf9-chuxi', 'aaf8-chuxi', 'a451-jinwen']],\n",
+       " ['a4d1-jinwen',\n",
+       "  ['a67e-jinwen', 'a4bd-chuxi', 'b0a8-jinwen', 'a448-chuxi', 'a6a8-jinwen']],\n",
+       " ['a440-chuxi',\n",
+       "  ['a6db-jinwen', 'a86b-jinwen', 'a453-chuxi', 'a4a4-jinwen', 'a4fd-chuxi']],\n",
+       " ['a6db-chuxi',\n",
+       "  ['a8e4-jinwen', 'a4a4-chuxi', 'a454-chuxi', 'a548-chuxi', 'a6d3-jinwen']],\n",
+       " ['a4fd-chuxi',\n",
+       "  ['a6d3-chuxi', 'a448-chuxi', 'a5bf-jinwen', 'b1d0-oracle', 'aaf7-jinwen']],\n",
+       " ['a451-jinwen',\n",
+       "  ['a5ce-jinwen', 'a5d5-jinwen', 'a4e9-jinwen', 'a8a3-chuxi', 'b54c-jinwen']],\n",
+       " ['a46a-chuxi',\n",
+       "  ['b6c0-chuxi', 'a4a4-jinwen', 'a540-jinwen', 'a5a6-jinwen', 'b773-chuxi']],\n",
+       " ['a4bd-jinwen',\n",
+       "  ['acdb-chuxi', 'a4bd-chuxi', 'a9fa-jinwen', 'a440-chuxi', 'a447-chuxi']],\n",
+       " ['a4a7-chuxi',\n",
+       "  ['a447-chuxi', 'a453-chuxi', 'a448-chuxi', 'aa47-jinwen', 'a6e6-jinwen']],\n",
+       " ['a4a7-jinwen',\n",
+       "  ['a454-jinwen', 'b16f-jinwen', 'a9ce-jinwen', 'a5fd-jinwen', 'a5ce-jinwen']],\n",
+       " ['a5db-chuxi',\n",
+       "  ['a457-chuxi', 'a977-chuxi', 'a548-chuxi', 'a4fd-chuxi', 'a4e9-jinwen']],\n",
+       " ['a751-chuxi',\n",
+       "  ['a4bd-chuxi', 'a7da-jinwen', 'a453-chuxi', 'a447-chuxi', 'a451-jinwen']],\n",
+       " ['a5d5-chuxi',\n",
+       "  ['a67e-jinwen', 'a5bf-jinwen', 'a6e8-oracle', 'a476-chuxi', 'a4e9-jinwen']],\n",
+       " ['a977-chuxi',\n",
+       "  ['a4bd-chuxi', 'a4a7-chuxi', 'a5d0-jinwen', 'b54c-jinwen', 'aacc-chuxi']],\n",
+       " ['a46a-chuxi',\n",
+       "  ['a4a7-chuxi', 'a451-jinwen', 'a56b-jinwen', 'a4a7-chuxi', 'a4a4-jinwen']],\n",
+       " ['a4e5-jinwen',\n",
+       "  ['b0a8-chuxi', 'a448-chuxi', 'a448-chuxi', 'b6c0-jinwen', 'a4eb-chuxi']],\n",
+       " ['a4e5-jinwen',\n",
+       "  ['b160-chuxi', 'a656-jinwen', 'a448-chuxi', 'a569-jinwen', 'a4bd-chuxi']],\n",
+       " ['a454-chuxi',\n",
+       "  ['a44a-oracle', 'a46c-jinwen', 'a5c1-chuxi', 'a45f-jinwen', 'aaf8-chuxi']],\n",
+       " ['bb50-chuxi',\n",
+       "  ['a5ce-jinwen', 'a5bf-jinwen', 'a4e9-chuxi', 'aaf9-jinwen', 'a45f-jinwen']],\n",
+       " ['a4a3-chuxi',\n",
+       "  ['a7da-jinwen',\n",
+       "   'a440-chuxi',\n",
+       "   'b944-smallseal',\n",
+       "   'b3bd-jinwen',\n",
+       "   'a67e-jinwen']],\n",
+       " ['a558-chuxi',\n",
+       "  ['a6d5-chuxi', 'a9d2-chuxi', 'a4a7-chuxi', 'a751-chuxi', 'a46b-jinwen']],\n",
+       " ['a4a7-jinwen',\n",
+       "  ['a67e-jinwen', 'b0a8-chuxi', 'b6c0-chuxi', 'aaf9-chuxi', 'a548-chuxi']],\n",
+       " ['a5db-jinwen',\n",
+       "  ['a4a7-chuxi', 'a4bd-jinwen', 'a473-jinwen', 'a548-jinwen', 'a447-chuxi']],\n",
+       " ['a5a6-jinwen',\n",
+       "  ['a8c6-chuxi', 'b54c-jinwen', 'a5ce-jinwen', 'a8e4-jinwen', 'b0a8-chuxi']],\n",
+       " ['a8c6-jinwen',\n",
+       "  ['a558-jinwen', 'a8ad-jinwen', 'a4eb-chuxi', 'a4eb-chuxi', 'a448-chuxi']],\n",
+       " ['a440-chuxi',\n",
+       "  ['a470-jinwen', 'a5ce-jinwen', 'a447-jinwen', 'a4a7-chuxi', 'a4a7-chuxi']],\n",
+       " ['a4a7-chuxi',\n",
+       "  ['a440-chuxi', 'a4e8-oracle', 'a8e4-jinwen', 'a46a-chuxi', 'a8ae-jinwen']],\n",
+       " ['a46b-jinwen',\n",
+       "  ['a5a6-jinwen', 'a46b-jinwen', 'a440-chuxi', 'ae61-jinwen', 'b6c0-jinwen']],\n",
+       " ['a67e-jinwen',\n",
+       "  ['a4e5-jinwen', 'a4e5-jinwen', 'a440-chuxi', 'bb50-chuxi', 'a4e8-oracle']],\n",
+       " ['bb50-chuxi',\n",
+       "  ['a4d2-chuxi', 'a4e5-jinwen', 'a5bf-chuxi', 'aaf9-chuxi', 'a448-chuxi']],\n",
+       " ['a4d2-jinwen',\n",
+       "  ['a4eb-chuxi', 'a4fd-smallseal', 'a440-jinwen', 'a8c6-chuxi', 'a447-chuxi']],\n",
+       " ['a4eb-jinwen',\n",
+       "  ['a46c-chuxi', 'a6d3-jinwen', 'a5a6-jinwen', 'a4a3-jinwen', 'a447-chuxi']],\n",
+       " ['a4a7-chuxi',\n",
+       "  ['a8ae-jinwen', 'a457-chuxi', 'b3be-jinwen', 'a4a3-jinwen', 'a4a7-chuxi']],\n",
+       " ['a4a7-chuxi',\n",
+       "  ['a440-chuxi', 'a453-chuxi', 'a4a7-chuxi', 'a4a7-chuxi', 'b773-jinwen']],\n",
+       " ['a453-chuxi',\n",
+       "  ['a9d2-chuxi', 'b6c0-chuxi', 'b3bd-chuxi', 'ae61-smallseal', 'b0a8-jinwen']],\n",
+       " ['a6ca-jinwen',\n",
+       "  ['a4e9-chuxi', 'a6e6-chuxi', 'a6db-chuxi', 'a5d5-chuxi', 'b0a8-chuxi']],\n",
+       " ['aa46-jinwen',\n",
+       "  ['a6e6-chuxi', 'a6e6-chuxi', 'a4a4-jinwen', 'a46b-chuxi', 'a4e5-jinwen']],\n",
+       " ['a8c6-jinwen',\n",
+       "  ['a67e-jinwen', 'a67e-jinwen', 'a4eb-jinwen', 'a4fb-chuxi', 'b16f-chuxi']],\n",
+       " ['a4eb-jinwen',\n",
+       "  ['a451-chuxi', 'a4e9-chuxi', 'a454-jinwen', 'bb50-chuxi', 'a4eb-chuxi']],\n",
+       " ['a5d5-chuxi',\n",
+       "  ['a6e8-jinwen',\n",
+       "   'aaf7-chuxi',\n",
+       "   'a8c6-smallseal',\n",
+       "   'a6a8-jinwen',\n",
+       "   'a5aa-chuxi']],\n",
+       " ['a548-jinwen',\n",
+       "  ['bb50-chuxi', 'a977-jinwen', 'a476-chuxi', 'a558-jinwen', 'a6ca-jinwen']],\n",
+       " ['b6c0-jinwen',\n",
+       "  ['a5df-jinwen', 'a558-jinwen', 'a4a3-chuxi', 'a4eb-chuxi', 'bb50-chuxi']],\n",
+       " ['a8e4-jinwen',\n",
+       "  ['a5ce-jinwen',\n",
+       "   'b16f-jinwen',\n",
+       "   'a4f4-chuxi',\n",
+       "   'b6c0-smallseal',\n",
+       "   'a548-jinwen']],\n",
+       " ['a44a-jinwen',\n",
+       "  ['a9fa-jinwen', 'a4eb-jinwen', 'a4ec-chuxi', 'a473-chuxi', 'a440-chuxi']],\n",
+       " ['a453-chuxi',\n",
+       "  ['aaf7-chuxi', 'b3bd-chuxi', 'a440-chuxi', 'b0ea-chuxi', 'a558-chuxi']],\n",
+       " ['a467-chuxi',\n",
+       "  ['a8e4-smallseal',\n",
+       "   'b0a8-chuxi',\n",
+       "   'a4e9-jinwen',\n",
+       "   'a4fd-jinwen',\n",
+       "   'a6ca-jinwen']],\n",
+       " ['a4a7-chuxi',\n",
+       "  ['a4e9-chuxi', 'a8e4-jinwen', 'a548-chuxi', 'a448-chuxi', 'a5ce-jinwen']],\n",
+       " ['a45f-jinwen',\n",
+       "  ['a4bd-jinwen', 'a5fd-chuxi', 'a4fd-jinwen', 'a4a7-chuxi', 'a440-chuxi']],\n",
+       " ['a5d0-jinwen',\n",
+       "  ['a6e8-jinwen', 'a8d3-jinwen', 'a4a4-chuxi', 'a9d2-chuxi', 'aaf8-jinwen']]]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_five"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def give_score_from_top_five(test):\n",
+    "    \"\"\"Takes our return object from fingerprint_test and returns the percent accuracy of our model\"\"\"\n",
+    "    total = 0\n",
+    "    correct = 0\n",
+    "    for x, y in test:\n",
+    "        if x == y[0]:\n",
+    "            correct += 1\n",
+    "        total += 1\n",
+    "    return correct/total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "give_score_from_top_five(top_five)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current = fingerprint_test(testing_data, training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.69"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "give_score(current)"
+   ]
   },
   {
    "cell_type": "code",
